--- a/diary_front/package.json
+++ b/diary_front/package.json
@@ -2,13 +2,18 @@
   "name": "diary_front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "axios": "^1.6.7",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "express-session": "^1.18.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
