--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,28 +1,23 @@
-# JSP 경로 설정
 spring:
-  mvc:
-    view:
-      prefix: '/WEB-INF/views/'
-      suffix: '.jsp'
 
-# DB 설정
+  # DB 설정
   output.ansi.enabled: always
   datasource:
-    url: 'jdbc:mysql://localhost:3306/popang'
+    url: 'jdbc:mysql://localhost:3306/diary'
     username: 'root'
     password: '1234'
     driver-class-name: 'com.mysql.cj.jdbc.Driver'
 
   jpa:
     database: mysql
-    generate-ddl: false
+    generate-ddl: true
     properties:
       hibernate:
         format_sql: false
-        default_batch_fetch_size: 100
-    open-in-view: true
+        default_batch_fetch_size: 30
+    open-in-view: false
 
-# 시큐리티 설정
+  # 시큐리티 설정
   security:
     user:
       name: 'a'
@@ -30,3 +25,7 @@ spring:
 # 로그 설정
 logging.level:
   org.hibernate.SQL: debug
+
+# 포트 설정
+server:
+  port: 8085
