--- a/diary_front/package.json
+++ b/diary_front/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
     "axios": "^1.6.7",
+    "express-session": "^1.18.0",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "express-session": "^1.18.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
